--- a/dha-spring-boot-autoconfigure/pom.xml
+++ b/dha-spring-boot-autoconfigure/pom.xml
@@ -4,14 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+<!--        <groupId>org.feidian.dha.spring.boot</groupId>-->
         <groupId>org.feidian</groupId>
         <artifactId>dha-spring-boot</artifactId>
-        <version>2.0.0</version>
+        <version>1.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>dha-spring-boot-autoconfigure</artifactId>
-    <version>2.0.0</version>
+    <version>1.0.0</version>
     <name>dha-spring-boot-autoconfigure</name>
     <description>dha-spring-boot-autoconfigure</description>
 
@@ -62,14 +63,4 @@
             <version>${spring-boot.version}</version>
         </dependency>
     </dependencies>
-
-    <!--    <build>-->
-    <!--        <plugins>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.springframework.boot</groupId>-->
-    <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-    <!--            </plugin>-->
-    <!--        </plugins>-->
-    <!--    </build>-->
-
 </project>
