--- a/dha-spring-boot-autoconfigure/pom.xml
+++ b/dha-spring-boot-autoconfigure/pom.xml
@@ -20,6 +20,7 @@
         <java.version>1.8</java.version>
         <nacos.version>0.2.10</nacos.version>
         <nacos-client.vaersion>1.4.3</nacos-client.vaersion>
+        <mybatis.version>2.2.2</mybatis.version>
     </properties>
 
     <dependencies>
@@ -61,6 +62,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
             <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
         </dependency>
     </dependencies>
 </project>
