--- a/dha-spring-boot-starter/pom.xml
+++ b/dha-spring-boot-starter/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!--    <parent>-->
-    <!--        <groupId>org.feidian</groupId>-->
-    <!--        <artifactId>dha-spring-boot</artifactId>-->
-    <!--        <version>1.0.0</version>-->
-    <!--        <relativePath/>-->
-    <!--    </parent>-->
+
+    <parent>
+        <groupId>org.feidian</groupId>
+        <artifactId>dha-spring-boot</artifactId>
+        <version>1.0.0</version>
+        <relativePath/>
+    </parent>
+
     <artifactId>dha-spring-boot-starter</artifactId>
     <version>1.0.0</version>
-    <groupId>org.feidian</groupId>
     <name>dha-spring-boot-starter</name>
     <description>dha-spring-boot-starter</description>
 
@@ -22,13 +23,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>2.6.4</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.feidian</groupId>-->
-        <!--            <artifactId>dha-spring-boot-autoconfigure</artifactId>-->
-        <!--            <version>1.0.0</version>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.feidian</groupId>
+            <artifactId>dha-spring-boot-autoconfigure</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <!--    <build>-->
