--- a/dha-spring-boot-autoconfigure/pom.xml
+++ b/dha-spring-boot-autoconfigure/pom.xml
@@ -62,5 +62,9 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 </project>
