--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <nacos.version>0.2.10</nacos.version>
         <nacos-client.version>1.4.3</nacos-client.version>
         <mybatis.version>2.2.2</mybatis.version>
+        <apache.commons.version>3.12.0</apache.commons.version>
     </properties>
 
     <dependencyManagement>
@@ -109,6 +110,12 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${apache.commons.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
