--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <nacos-client.version>1.4.3</nacos-client.version>
         <mybatis.version>2.2.2</mybatis.version>
         <apache.commons.version>3.12.0</apache.commons.version>
+        <canal.version>1.1.5</canal.version>
     </properties>
 
     <dependencyManagement>
@@ -116,6 +117,18 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${apache.commons.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.alibaba.otter/canal.client -->
+            <dependency>
+                <groupId>com.alibaba.otter</groupId>
+                <artifactId>canal.client</artifactId>
+                <version>${canal.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.alibaba.otter/canal.protocol -->
+            <dependency>
+                <groupId>com.alibaba.otter</groupId>
+                <artifactId>canal.protocol</artifactId>
+                <version>${canal.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
